Fix line height causing interaction overlap

--- a/src/app/board/board.component.scss
+++ b/src/app/board/board.component.scss
@@ -37,7 +37,7 @@
   border: 0.075em solid #160d03;
   // outline: 0.05em solid #988d82;
   // outline: 0.05em solid #160d03;
-  line-height: 5em;
+  line-height: 1em;
 }
 
 .guide--complete {
